--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     ReactDOM.render (
       <div className="field">
-        <Task>Hey, it is me!</Task>
+        <Task>1</Task>
         <Task>Task number 2</Task>
         <Task>Hello World!</Task>
       </div>, app);
