--- a/index.html
+++ b/index.html
@@ -17,14 +17,27 @@
     class ContactList extends React.Component{
       constructor(props) {
         super(props);
+        this.state = {displayedContacts: DataBase};
       }
+
+      handleSearch = (event) =>{
+        var key = event.target.value.toLowerCase();
+        var displayedContacts= DataBase.filter(function(el) {
+          var searchValue = el.name.toLowerCase();
+          return searchValue.indexOf(key) !== -1;
+        });
+
+        this.setState({displayedContacts:displayedContacts});
+
+      }
+
       render(){
         return (
           <div className="contacts">
-          <input type="text" className="search"/>
+          <input type="text" className="search" onChange = {this.handleSearch}/>
             <ul className="contacts-list">
               {
-                DataBase.map(function(el){
+                this.state.displayedContacts.map(function(el){
                   return <Contact
                       key={el.id}
                       name={el.name}
@@ -43,7 +56,7 @@
       }
       render(){
         return <li className="contact">
-                  <div className="contact-name">{this.props.name}</div>                                  
+                  <div className="contact-name">{this.props.name}</div>
                   <div className="contact-surname">{this.props.surname}</div>
               </li>;
       };
